# skills-applier

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
data/examples/: index.json  statistical_methods_example.json
data/skills_metadata/: data_visualization_example.json  mathematical_implementation_example.json  regression_analysis_example.json  statistical_methods_example.json
stats_solver/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  install.ps1  install.sh  pyproject.toml  setup.py  test_rollback.ps1  test_rollback.sh
stats_solver/cli/: __init__.py  config.py  display.py  interactive.py  main.py  output.py  skills.py
stats_solver/config/: default.yaml
stats_solver/docs/: configuration.md  feature_flags.md  rollback.md  skill_guide.md
stats_solver/llm/: __init__.py  base.py  factory.py  lm_studio.py  manager.py  ollama.py
stats_solver/problem/: __init__.py  classifier.py  constraints.py  data_types.py  extractor.py  output_format.py
stats_solver/prompts/: code_generation.txt  docstring_generation.txt  problem_analysis.txt  recommendation.txt  visualization.txt
stats_solver/recommendation/: __init__.py  alternatives.py  chain_builder.py  matcher.py  prerequisites.py  scorer.py
stats_solver/skills/: __init__.py  classifier.py  editor.py  index.py  llm_extractor.py  metadata_schema.py  scanner.py
stats_solver/solution/: __init__.py  code_generator.py  dependencies.py  docstring.py  sample_data.py  validator.py  visualization.py
stats_solver/solution/templates/: __init__.py  base.py  data_analysis.j2  data_analysis.py  manager.py  mathathematical_implementation.j2  mathathematical_implementation.py  mathematical_implementation.j2  statistical_method.j2  statistical_method.py  visualization.j2  visualization.py
tests/: __init__.py
tests/fixtures/: __init__.py  mock_data.py
tests/integration/: test_end_to_end.py
tests/unit/: test_llm_integration.py  test_problem_analysis.py  test_recommendation.py  test_skill_index.py  test_solution_generation.py
web-demo/: .env.example  README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
web-demo/netlify/functions/: db.ts  get-skills.ts  init-skills-db.ts  llm-proxy.ts  recommend.ts
web-demo/scripts/: init-skills.ts
web-demo/src/: App.vue
web-demo/src/components/: ErrorDisplay.vue  LLMConfigPanel.vue  LoadingState.vue  ProblemInput.vue  RecommendationList.vue  SkillCard.vue
web-demo/src/composables/: useLLMConfig.ts  useRecommendation.ts  useSkillStats.ts
web-demo/src/types/: skill.ts
web-demo/src/views/: HomeView.vue
